# pdf_statement_reader

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: issue-branch.yml  publish.yml  python-publish.yml  test.yml
pdf_statement_reader/: __init__.py  decrypt.py  parse.py  validate.py
pdf_statement_reader/config/: psr_config.schema.json  psr_config_v2.schema.json  psr_config_v2.schema.yaml
pdf_statement_reader/config/cba/: saving.json
pdf_statement_reader/config/citi/: cheque.json
pdf_statement_reader/config/template/: bank-statement-v2.json  bank-statement-v2.yaml
pdf_statement_reader/config/za/absa/: cheque-sample.json  cheque.json
tests/: test_import.py  test_parse_methods.py
