[project]
urls = { "issues" = "https://github.com/marlanperumal/pdf_statement_reader/issues", "source" = "https://github.com/marlanperumal/pdf_statement_reader", "homepage" = "https://github.com/marlanperumal/pdf_statement_reader" }
name = "pdf-statement-reader"
version = "0.3.2"
description = "PDF Statement Reader"
keywords = ["pdf", "statement", "reader", "bank statement", "digitise"]
authors = [{ name = "Marlan Perumal", email = "marlan.perumal@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.1.8", "pikepdf>=9.5.1", "tabula-py[jpype]>=2.10.0"]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "ipykernel>=6.29.5",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "coveralls>=4.0.1",
]

[project.scripts]
psr = "pdf_statement_reader:cli"

[tool.pytest.ini_options]
addopts = ["-v", "--cov=pdf_statement_reader", "--import-mode=importlib"]

[tool.hatch.build]
exclude = [
    "tests/*",
    "docs",
    "docs/*",
    "**/.ipynb_checkpoints",
    "**/.ipynb_checkpoints/*",
    "tests",
    "tests/*",
    "*.yml",
    ".gitignore",
    "uv.lock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
