[metadata]
license_files = LICENSE

[check-manifest]
ignore =
    Pipfile
    Pipfile.lock
    tox.ini
    setup.cfg
    tests/*
    docs
    docs/*
    **/.ipynb_checkpoints
    **/.ipynb_checkpoints/*
    tests
    tests/*
    *.yml

[flake8]
exclude = .tox,*.egg,build,**/.ipynb_checkpoints
select = E,W,F
ignore = E128, W293
max-line-length = 119